# Shapes

./: CMakeLists.txt  Requirement.doc  TODO.txt  main.cpp  run.bat
Diagrams/: Shapes.drawio  Shapes.drawio.xml
Inc/: Palette.hpp  Point.hpp  Shape.hpp  TestApp.hpp
Src/: Palette.cpp  Point.cpp  Shape.cpp  TestApp.cpp
